--- a/src/components/LandingPage.astro
+++ b/src/components/LandingPage.astro
@@ -30,24 +30,81 @@ const lang = Astro.url.pathname.split('/')[1] || DEFAULT_LANGUAGE_CODE
         
         <!-- Logo decoration above About Me button -->
         <div class="mt-12 flex justify-center w600:mt-9">
-          <img 
-            src="/images/logo4_day.png" 
-            alt="Blog decoration logo" 
-            class="h-20 w-auto opacity-80 hover:opacity-100 transition-opacity duration-300 w600:h-18 w400:h-16 dark:hidden"
-          />
-          <img 
-            src="/images/logo4_night.png" 
-            alt="Blog decoration logo" 
-            class="h-20 w-auto opacity-80 hover:opacity-100 transition-opacity duration-300 w600:h-18 w400:h-16 hidden dark:block"
-          />
+          <a href={`/${lang}/introduction`} class="hover:opacity-100 transition-opacity duration-300">
+            <img 
+              src="/images/logo4_day.png" 
+              alt="Blog decoration logo" 
+              class="h-20 w-auto opacity-80 hover:opacity-100 transition-opacity duration-300 w600:h-18 w400:h-16 dark:hidden"
+            />
+            <img 
+              src="/images/logo4_night.png" 
+              alt="Blog decoration logo" 
+              class="h-20 w-auto opacity-80 hover:opacity-100 transition-opacity duration-300 w600:h-18 w400:h-16 hidden dark:block"
+            />
+          </a>
         </div>
         
-        <div class="mt-12 flex items-center w600:mt-9">
+        <div class="mt-12 flex flex-col items-center gap-4 w600:mt-9 w600:gap-3 w400:gap-2">
+          <!-- 前三个按钮：Posts, Categories, Tags -->
+          <div class="flex justify-center gap-4 w600:gap-3 w400:gap-2">
+          <!-- POSTS -->
           <a
-            href={`/${lang}${GET_STARTED_LINK}`}
-            class="flex h-12 items-center justify-center rounded-2xl border border-[#374151] px-6 text-center text-lg text-[#374151] transition-all duration-300 ease-out hover:bg-[#374151] hover:text-white hover:scale-[1.05] active:scale-[0.95] focus:outline-none focus:ring-2 focus:ring-[#374151]/40 focus:ring-offset-2 focus:ring-offset-white w600:text-base w400:h-10 w400:px-3 dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#2b5876] dark:focus:ring-[#e5e7eb]/40 dark:focus:ring-offset-[#2b5876]"
-            >{t.getStartedBtnText}
+            href={`/${lang}/posts`}
+            class="flex h-10 items-center justify-center rounded-2xl border border-[#374151] px-4 text-center text-base text-[#374151] transition-all duration-300 ease-out hover:bg-[#374151] hover:text-white hover:scale-[1.05] active:scale-[0.95] focus:outline-none focus:ring-2 focus:ring-[#374151]/40 focus:ring-offset-2 focus:ring-offset-white w600:text-sm w400:h-10 w400:px-3 dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#374151] dark:focus:ring-[#e5e7eb]/40 dark:focus:ring-offset-[#2b5876]"
+          >
+            <svg class="h-4 w-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+            </svg>
+            Posts
           </a>
+          
+          <!-- CATEGORIES -->
+          <a
+            href={`/${lang}/categories`}
+            class="flex h-10 items-center justify-center rounded-2xl border border-[#374151] px-4 text-center text-base text-[#374151] transition-all duration-300 ease-out hover:bg-[#374151] hover:text-white hover:scale-[1.05] active:scale-[0.95] focus:outline-none focus:ring-2 focus:ring-[#374151]/40 focus:ring-offset-2 focus:ring-offset-white w600:text-sm w400:h-10 w400:px-3 dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#374151] dark:focus:ring-[#e5e7eb]/40 dark:focus:ring-offset-[#2b5876]"
+          >
+            <svg class="h-4 w-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 10h16M4 14h16M4 18h16"></path>
+            </svg>
+            Categories
+          </a>
+          
+          <!-- TAGS -->
+          <a
+            href={`/${lang}/tags`}
+            class="flex h-10 items-center justify-center rounded-2xl border border-[#374151] px-4 text-center text-base text-[#374151] transition-all duration-300 ease-out hover:bg-[#374151] hover:text-white hover:scale-[1.05] active:scale-[0.95] focus:outline-none focus:ring-2 focus:ring-[#374151]/40 focus:ring-offset-2 focus:ring-offset-white w600:text-sm w400:h-10 w400:px-3 dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#374151] dark:focus:ring-[#e5e7eb]/40 dark:focus:ring-offset-[#2b5876]"
+          >
+            <svg class="h-4 w-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"></path>
+            </svg>
+            Tags
+          </a>
+          </div>
+          
+          <!-- 下面两个按钮居中显示 -->
+          <div class="flex justify-center gap-4 w600:gap-3 w400:gap-2">
+            <!-- ARCHIVES -->
+            <a
+              href={`/${lang}/archives`}
+              class="flex h-10 items-center justify-center rounded-2xl border border-[#374151] px-4 text-center text-base text-[#374151] transition-all duration-300 ease-out hover:bg-[#374151] hover:text-white hover:scale-[1.05] active:scale-[0.95] focus:outline-none focus:ring-2 focus:ring-[#374151]/40 focus:ring-offset-2 focus:ring-offset-white w600:text-sm w400:h-10 w400:px-3 dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#374151] dark:focus:ring-[#e5e7eb]/40 dark:focus:ring-offset-[#2b5876]"
+            >
+              <svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"></path>
+              </svg>
+              Archives
+            </a>
+            
+            <!-- ABOUT -->
+            <a
+              href={`/${lang}${GET_STARTED_LINK}`}
+              class="flex h-10 items-center justify-center rounded-2xl border border-[#374151] px-4 text-center text-base text-[#374151] transition-all duration-300 ease-out hover:bg-[#374151] hover:text-white hover:scale-[1.05] active:scale-[0.95] focus:outline-none focus:ring-2 focus:ring-[#374151]/40 focus:ring-offset-2 focus:ring-offset-white w600:text-sm w400:h-10 w400:px-3 dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#374151] dark:focus:ring-[#e5e7eb]/40 dark:focus:ring-offset-[#2b5876]"
+            >
+              <svg class="h-4 w-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+              About
+            </a>
+          </div>
         </div>
       </div>
     </div>
