--- a/src/components/navigation/SelectLanguage.astro
+++ b/src/components/navigation/SelectLanguage.astro
@@ -8,7 +8,7 @@ const lang: LanguageKeys = langFromURL as LanguageKeys
 
 <div class="relative z-10">
   <button
-    class="flex items-center gap-4 rounded-base p-2 px-4 transition-[background-color] duration-300 hover:bg-black/10 dark:hover:bg-white/10 w500:gap-2 w500:p-2"
+    class="flex items-center gap-4 rounded-base p-2 px-4 transition-[background-color] duration-300 hover:bg-black/10 dark:hover:bg-white/10 w500:gap-2 w500:p-2 w-[120px] w500:w-[60px] justify-center"
     data-active="false"
     id="select-btn"
   >
@@ -46,35 +46,19 @@ const lang: LanguageKeys = langFromURL as LanguageKeys
   </button>
   <div
     id="language-dropdown"
-    class="duration invisible absolute right-0 top-16 w-min rounded-base opacity-0 outline outline-1 outline-black/20 transition-all dark:outline-white/20 bg-[rgba(235,236,244,0.8)] backdrop-blur-md dark:bg-[rgba(60,78,118,0.8)]"
+    class="duration invisible absolute right-0 top-16 w-[100px] rounded-base opacity-0 outline outline-1 outline-black/20 transition-all dark:outline-white/20 bg-[rgba(227,238,255,0.8)] backdrop-blur-md dark:bg-[rgba(60,78,118,0.8)]"
   >
     {
       Object.entries(LANGUAGES).map(([key, value]) => {
         return (
           <button
-            class="flex w-full items-center justify-between bg-[rgba(235,236,244,0.8)] backdrop-blur-md px-6 py-2 text-left transition-[background-color] duration-300 first-of-type:rounded-t-base last-of-type:rounded-b-base hover:bg-[rgba(235,236,244,0.9)] dark:bg-[rgba(60,78,118,0.8)] dark:hover:bg-[rgba(60,78,118,0.9)]"
+            class="flex w-full items-center justify-between bg-[rgba(227,238,255,0.8)] backdrop-blur-md px-6 py-2 text-left transition-[background-color] duration-300 first-of-type:rounded-t-base last-of-type:rounded-b-base hover:bg-[rgba(227,238,255,0.9)] dark:bg-[rgba(60,78,118,0.8)] dark:hover:bg-[rgba(60,78,118,0.9)]"
             data-lang={key}
           >
             <span class="mr-6 whitespace-nowrap" class:list={[
               key === 'jp' ? 'font-japanese' : '',
               'text-sm'
             ]}>{value}</span>
-
-            {key === lang && (
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                class="h-6 w-6"
-                fill="none"
-              >
-                <path
-                  d="M5 13.3636L8.03559 16.3204C8.42388 16.6986 9.04279 16.6986 9.43108 16.3204L19 7"
-                  class="stroke-lightModeIcon dark:stroke-darkModeIcon"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            )}
           </button>
         )
       })
