--- a/src/layouts/Markdown.astro
+++ b/src/layouts/Markdown.astro
@@ -8,6 +8,8 @@ import Base from '@/layouts/Base.astro'
 import Sidebar from '@/components/sidebar/Sidebar.astro'
 import OnThisPage from '@/components/navigation/OnThisPage.astro'
 import PreviousNextPage from '@/components/navigation/PreviousNextPage.astro'
+import BlogPostNavigation from '@/components/navigation/BlogPostNavigation.astro'
+import BlogPostMeta from '@/components/BlogPostMeta.astro'
 
 const langFromURL = Astro.url.pathname.split('/')[1] || DEFAULT_LANGUAGE_CODE
 const lang: LanguageKeys = langFromURL as LanguageKeys
@@ -21,19 +23,33 @@ const { frontmatter, headings } = Astro.props as {
 <Base frontmatter={frontmatter}>
   <Sidebar lang={lang} />
   <div
-    class="ml-[300px] mr-[500px] w1600:mr-[300px] w1200:mx-[250px] w1100:ml-[250px] w1100:mr-0 w800:ml-0"
+    class="ml-[250px] mr-[500px] w1600:mr-[300px] w1200:mx-[200px] w1100:ml-[200px] w1100:mr-0 w800:ml-0"
   >
     <div class="mx-auto w-[800px] w1400:w-full">
       <OnThisPage lang={lang} headings={headings} />
       <div
         id="markdown"
-        class="prose w-full max-w-full break-words p-10 text-lightModeText/90 w1200:prose-sm prose-headings:scroll-mt-28 prose-headings:text-lightModeText prose-a:text-lightModeText prose-blockquote:text-lightModeText prose-strong:text-lightModeText prose-ol:text-lightModeText prose-ul:text-lightModeText prose-table:text-lightModeText prose-tr:text-lightModeText prose-td:text-lightModeText prose-hr:bg-transparent dark:text-darkModeText/90 dark:prose-headings:text-darkModeText dark:prose-a:text-darkModeText dark:prose-blockquote:text-darkModeText dark:prose-strong:text-darkModeText dark:prose-code:text-darkModeText dark:prose-ol:text-darkModeText dark:prose-ul:text-darkModeText dark:prose-table:text-darkModeText dark:prose-tr:text-darkModeText dark:prose-td:text-darkModeText w800:p-8 w500:p-5 custom-prose prose-h1:text-3xl prose-h2:text-2xl prose-h3:text-xl prose-h4:text-lg w800:prose-h1:text-2xl w800:prose-h2:text-xl w800:prose-h3:text-lg w500:prose-h1:text-xl w500:prose-h2:text-lg w500:prose-h3:text-base"
+        class="prose w-full max-w-full break-words pt-4 pb-10 px-10 text-lightModeText/90 w1200:prose-sm prose-headings:scroll-mt-28 prose-headings:text-lightModeText prose-a:text-lightModeText prose-blockquote:text-lightModeText prose-strong:text-lightModeText prose-ol:text-lightModeText prose-ul:text-lightModeText prose-table:text-lightModeText prose-tr:text-lightModeText prose-td:text-lightModeText prose-hr:bg-transparent dark:text-darkModeText/90 dark:prose-headings:text-darkModeText dark:prose-a:text-darkModeText dark:prose-blockquote:text-darkModeText dark:prose-strong:text-darkModeText dark:prose-code:text-darkModeText dark:prose-ol:text-darkModeText dark:prose-ul:text-darkModeText dark:prose-table:text-darkModeText dark:prose-tr:text-darkModeText dark:prose-td:text-darkModeText w800:pt-4 w800:pb-8 w800:px-8 w500:pt-4 w500:pb-5 w500:px-5 custom-prose prose-h1:text-3xl prose-h2:text-2xl prose-h3:text-xl prose-h4:text-lg w800:prose-h1:text-2xl w800:prose-h2:text-xl w800:prose-h3:text-lg w500:p-8 w500:p-5 custom-prose prose-h1:text-xl w500:prose-h2:text-lg w500:prose-h3:text-base"
       >
         <h1 class="w500:text-xl" id="_top">{frontmatter.title}</h1>
         <p>{frontmatter.description}</p>
         <slot />
+        {Astro.url.pathname.includes('/blog/') && frontmatter.pubDate && (
+          <BlogPostMeta 
+            pubDate={frontmatter.pubDate} 
+            category={frontmatter.category} 
+            tags={frontmatter.tags || []} 
+            lang={lang}
+          />
+        )}
       </div>
       <PreviousNextPage lang={lang} />
+      {Astro.url.pathname.includes('/blog/') && (
+        <BlogPostNavigation 
+          lang={lang} 
+          currentSlug={Astro.url.pathname.split('/blog/')[1]?.replace(/\/$/, '') || ''} 
+        />
+      )}
     </div>
   </div>
 </Base>
