--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -96,10 +96,10 @@ const lang = Astro.url.pathname.split('/')[1] || DEFAULT_LANGUAGE_CODE
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
-        lucide.createIcons();
+        (window as any).lucide.createIcons();
       });
       document.addEventListener('astro:after-swap', () => {
-        lucide.createIcons();
+        (window as any).lucide.createIcons();
       });
     </script>
   </head>
