--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -156,7 +156,8 @@ const lang = Astro.url.pathname.split('/')[1] || DEFAULT_LANGUAGE_CODE
       <div class="mx-auto max-w-4xl px-5">
         <div class="flex flex-col items-center space-y-2">
           <!-- Logo signature - only show on non-homepage -->
-          {Astro.url.pathname !== '/' && Astro.url.pathname !== '/jp' && Astro.url.pathname !== '/en' && (
+          {!['/', '/jp', '/en', '/jp/', '/en/'].includes(Astro.url.pathname) && 
+           !Astro.url.pathname.match(/^\/[a-z]{2}$/) && (
             <>
               <div class="h-12 flex items-center justify-center">
                 <img 
